examples/type_system/failing/43_main_unhandled_custom_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: runtime_error
// skip: VM currently runs this custom-effect main, while LLVM reports an unhandled effect at runtime

effect Console {
    print: String -> ()
}

fn log(msg: String) -> Unit with Console {
    perform Console.print(msg)
}

fn main() -> Unit with Console {
    log("x")
}
